--- a/_toc.yml
+++ b/_toc.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: README
+root: intro
 parts:
   - caption:
     numbered: false
@@ -15,17 +15,20 @@ parts:
         title: Capstone Experience
       - file: content/about-me/research.md
         title: Research Work
-  - caption: My Guide Websites and Projects
+      - file: content/projects.md 
+  - caption: Projects
     numbered: false
     chapters:
-      - file: content/projects.md
-        title: Projects
       - url: https://breezy-codes.github.io/computer-networks-guide
         title: Computer Networks Guide
       - url: https://breezy-codes.github.io/cryptography-guide
         title: Cryptography Guide
       - url: https://breezy-codes.github.io/quantum-cryptography-guide
         title: Quantum Cryptography Guide
+      - url: https://cheat-sheets.breezy-codes.com
+        title: Cheat Sheets
+      - url: https://tva.breezy-codes.com
+        title: TVA Ethical Hacking Project
   - caption: Blog Posts
     numbered: false
     chapters:
@@ -33,5 +36,5 @@ parts:
         title: Creating Form Spam
 #     - file: content/blog-posts/2024-04-03-picking-cybersecurity.md
       - file: content/blog-posts/2024-04-08-sucked-at-maths-in-school.md
-        title: I suck at maths in school
+        title: I sucked at maths in school
 #     - file: 
