--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,8 @@ parts:
         title: Capstone Experience
       - file: content/about-me/research.md
         title: Research Work
+      - file: content/about-me/publications.md
+        title: My Publications
       - file: content/projects.md 
   - caption: Projects
     numbered: false
